updated index.html style.css to fix top section

--- a/index.html
+++ b/index.html
@@ -9,13 +9,16 @@
     </head>
     <body>
         <div class="header">
-            <div class="headerlogotext">Header Logo</div>
-            <ul class="herosectext">
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
-            </ul>
-
+            <div class="header1-1">
+                <div class="headerlogotext">Header Logo</div>
+                <ul class="herosectext">
+                    <li>header link one</li>
+                    <li>header link two</li>
+                    <li>header link three</li>
+                </ul>
+    
+                
+            </div>
             <div class="header1">
                 <div class="container">
                     <div class="heromaintext">This website is awesome</div>
