--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>My First Landing Page</title>
         <link rel="stylesheet" href="style.css">
